# Python_web_repo

Atlas MongoDB/: config.ini  models.py  pyproject.toml  search.py  seeds.py
Django_project/: .gitignore  pyproject.toml
Django_project/quotes/: .env
Django_project/quotes/quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
Django_project/quotes/quoteapp/management/commands/: scrape_quotes.py
Django_project/quotes/quoteapp/migrations/: 0001_initial.py  0002_alter_author_born_date_alter_author_description_and_more.py  0003_alter_author_fullname_alter_tag_tag_name.py  0004_alter_author_born_date.py
Django_project/quotes/quoteapp/templates/quoteapp/: author.html  author_detail.html  base.html  detail.html  index.html  quote.html  tag.html
Django_project/quotes/quoteapp/templatetags/: extract_tags.py
Django_project/quotes/quotes/: settings.py
Django_project/quotes/users/: views.py
Eleventh_repo/: create_db.py  execute_query.py  fill_data.py  grades.db  pyproject.toml  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  tables.sql
RabbitMQ/: config.ini  consumer.py  models.py  producer.py  pyproject.toml
RestAPI/: .env.example  docker-compose.yml  main.py  pyproject.toml  test.db
RestAPI/docs/source/: conf.py  index.rst
RestAPI/migrations/: env.py
RestAPI/migrations/versions/: 00782b102d29_init.py  25977ebc2fd2_add_table_users.py  60047f6d8f81_add_verify_for_user.py  664d1d056511_init.py  6cb57d603dd1_add_role.py
RestAPI/postgres-data/: postmaster.pid
RestAPI/postgres-data/base/16384/: 1247  1249  1259  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  3501  3502  3503  3534  5002
RestAPI/postgres-data/global/: 1260  1262  2671  pg_control
RestAPI/src/conf/: config.py
RestAPI/src/database/: db.py
RestAPI/src/entity/: models.py
RestAPI/src/repository/: contacts.py  users.py
RestAPI/src/routes/: auth.py  contacts.py  users.py
RestAPI/src/schemas/: contacts.py  user.py
RestAPI/src/services/: auth.py  email.py  role.py
RestAPI/src/services/templates/: verify_email.html
RestAPI/tests/: conftest.py  test_e2e_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
Scrapy_project/: authors.json  main.py  pyproject.toml
Tenth_repo/: main.js  main.py  pyproject.toml  server.py  use_exchange_info.txt
Twelfth_repo/: alembic.ini  config.ini  my_select.py  pyproject.toml  seed.py
Twelfth_repo/alembic/: env.py
Twelfth_repo/alembic/versions/: 436bb46bb5b9_init.py
Twelfth_repo/conf/: db.py  models.py
