[tool.poetry]
name = "atlas mongodb"
version = "0.1.0"
description = ""
authors = ["ViKalachova <142012394+ViKalachova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = {extras = ["srv", "tls"], version = "^4.6.2"}
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
