[tool.poetry]
name = "rabbitmq"
version = "0.1.0"
description = ""
authors = ["ViKalachova <142012394+ViKalachova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
pika = "^1.3.2"
faker = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
