[tool.poetry]
name = "scrapy-project"
version = "0.1.0"
description = ""
authors = ["ViKalachova <142012394+ViKalachova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
